--- a/s/css/_skin_blue.css
+++ b/s/css/_skin_blue.css
@@ -13,7 +13,7 @@
 
 body
 {
-    background: #fcfcfc;
+    background: #f8f8f8;
     font-family:helvetica, arial, verdana, sans-serif;
     color:#666;
     font-size:12px;
