--- a/templates/about.html
+++ b/templates/about.html
@@ -144,7 +144,7 @@
                              <div class="tab-content">
                                <div class="tab-pane active" id="home">
                                    <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
-                                   (in the hopes that you'll <a href="support.html">donate</a> to help keep us going!).</p>
+                                   (in the hopes that you'll <a href="donate.html">donate</a> to help keep us going!).</p>
                                <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
                                <p>Some documents &mdash; such as the IRS 990 &mdash; won't be available until the next fiscal year, since we're just geting off the ground.</p></div>
                                <div class="tab-pane" id="docs-state">
