--- a/templates/conditions/_condition_page.html
+++ b/templates/conditions/_condition_page.html
@@ -25,7 +25,7 @@
             <div class="row-fluid">
                 <div class="span2">
                       <span class="btn btn-inverse">
-                        <i class="icon-file icon-white"></i>
+                        <i class="icon-facetime-video icon-white"></i>
                       </span>
                 </div>
                 <div class="span10 post-title">
@@ -159,64 +159,6 @@
 <!--end post-->
 
 
-
-
-<!--post-->
-<div class="row-fluid">
-    <div class="span12 post">
-
-        <div class="row-fluid post-image">
-
-            <div class="span12">
-                <div class="portfolioItem">
-
-                    <!--vimeo video-->
-                    <a href="http://vimeo.com/39251390" class="peVideo"></a>
-
-
-                </div>
-            </div>
-        </div>
-
-        <!--post content-->
-        <div class="row-fluid post-content">
-
-            <div class="row-fluid">
-                <div class="span2">
-                      <span class="btn btn-inverse">
-                        <i class="icon-facetime-video icon-white"></i>
-                      </span>
-                </div>
-                <div class="span10 post-title">
-                    <h3>
-                        <a href="blog_post_video.html">Video Post ( Vimeo/YouTube/Local/Vid.ly )</a>
-                    </h3>
-                </div>
-            </div>
-
-            <div class="row-fluid">
-                <div class="span2 post-meta">
-                    <p class="post-date">23 Mar 2012</p>
-                    <p class="tags">
-                        <a href="#">standard</a>,
-                        <a href="#">startup</a>,
-                        <a href="#">strategy</a>,
-                        <a href="#">risk</a>
-                    </p>
-                    <p class="comments-num"><a href="#">5<span class="icon-comment"></span></a></p>
-                </div>
-                <div class="span10">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-                </div>
-            </div>
-        </div>
-        <!--end post content-->
-
-    </div>
-</div>
-<!--end post-->
-
-
 </div>
 </div>
 </div>
@@ -272,26 +214,21 @@
         <div class="textwidget"><p>Lorem ipsum dolor sit amet, consec tetuer adipiscing elit. Phasellus hen drerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapi bus id, mattis vel, nisi. Sed pretium.</p></div> <a href="#"><span class="label">Read More</span></a>
     </div>
 
-
-    <!--portfolio widget-->
-
     <div class="widget widget_portfolio">
-        <h3>Portfolio Widget</h3>
+        <h4>Patient Support Resources</h4>
         <div>
-
-            <a href="project_single.html" class="peOver">
-                <img src="img/content/project1.jpg" alt="project" />
-                <span></span>
-            </a>
+            <a href="#" class="peOver"><br/><span></span></a>
             <div class="title">
-                <span class="icon-picture"></span><a href="project_single.html">Think Local Act Global</a>
+                <span class="icon-picture"></span><a href="#">Connect to Others</a><br />
             </div>
-            <p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+	    <ul>
+	      <li>test</li>
+	      <li>test</li>
+	    </ul>
         </div>
     </div>
 
-
-</aside> <!--end sidebar-->
+</aside>
 </div>
 </div>
 </section>
