--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,6 @@
     {% include 'ga_tracking_code.html' %}
 </head>
 <body>
-<!--header and menu-->
 <header class="navbar navbar-fixed-top" id="top">
     <div class="navbar-inner">
         <div class="container">
@@ -36,15 +35,15 @@
                 <span class="btnTitle">Menu</span>
                 <span class="icon-chevron-down icon-white"></span>
             </a>
-            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /></a>
+            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo_sml.png') }}" {#height="100"#} alt="ClinDesk, Inc." /></a>
             <div class="nav-collapse">
-                <div class="smedia widget widget_search">
+               {# <div class="smedia widget widget_search">
                     <form class="form-inline" action="/search.html" id="searchform" role="search">
                         <input type="hidden" name="cx" value="002941556813235485135:eikq6dcpctw"><input type="hidden" name="cof" value="FORID:11">
                         <input type="text" class="input-medium span3" name="q" placeholder="Search...">
                         <button class="icon-search" type="submit"></button>
                     </form>
-                </div>
+                </div> #}
                 <ul class="nav">
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/conditions/">Conditions</a></li> {#
@@ -70,12 +69,18 @@
         </div>
     </div>
 </header>
+<div class="container" style="padding-top:54px">
+    <div class="span12">
+      Logo and search go here<br />
+      Then some other stuff
+    </div>
+  </div>
+</div>
 <section class="taglineWrap subnav">
     <div class="container">
         <div class="row-fluid tagline">
-	  <div class="span2"></div>
-            <div class="span8"><h2>{% block tagline_text %}overwrite this tagline_text block{% endblock %}</h2></div>
-            {#               <div class="span4 action">
+            <div class="span12"><h2>{% block tagline_text %}overwrite this tagline_text block{% endblock %}</h2></div>
+            {#              <div class="span4 action">
             <div>
                 <a href="#" class="btn first btn-success">Learn More</a>
                 <span>or</span>
