Thoughts on this UI?

--- a/s/css/_skin_blue.css
+++ b/s/css/_skin_blue.css
@@ -261,11 +261,9 @@ blockquote p{
     opacity:0.8;
 }
 
-/* END GENERAL */
-
 
 .navbar{
-    background-color: #C0C0C0;
+    background-color: #696969;
 }
 
 .navbar {
