--- a/templates/base.html
+++ b/templates/base.html
@@ -68,11 +68,9 @@
         </div>
     </div>
 </header>
-<div class="container" style="padding-top:54px">
-    <div class="span12">
-      Logo and search go here<br />
-      Then some other stuff
-    </div>
+<div class="container" style="padding-top:25px">
+  <div class="span12">
+    <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /></a>
   </div>
 </div>
 <section class="taglineWrap subnav">
