--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                 <span class="btnTitle">Menu</span>
                 <span class="icon-chevron-down icon-white"></span>
             </a>
-            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo_sml.png') }}" {#height="100"#} alt="ClinDesk, Inc." /></a>
+            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo_sml.png') }}" alt="ClinDesk, Inc." /></a>
             <div class="nav-collapse">
                {# <div class="smedia widget widget_search">
                     <form class="form-inline" action="/search.html" id="searchform" role="search">
@@ -70,7 +70,7 @@
 </header>
 <div class="container" style="padding-top:25px">
   <div class="span12">
-    <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /></a>
+    <a class="brand-large" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /></a>
   </div>
 </div>
 <section class="taglineWrap subnav">
