--- a/s/css/_skin_blue.css
+++ b/s/css/_skin_blue.css
@@ -264,40 +264,36 @@ blockquote p{
 
 .navbar{
     background-color: #696969;
-}
-
-.navbar {
-    border-bottom:2px solid #49afcd;
+    border-bottom:2px solid #5cbc1a;
 }
 
 .navbar .nav > li > a{
-    color:#979795;
-    font-weight:bold;
-    font-size:14px;
-    text-shadow: none;
-    border: 1px solid #ccc;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom:2px solid #c8e6e0;
+    font-size:15px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom:0;
 }
 
 .navbar .nav > li > a:hover {
-    background-color: transparent;
-    color: #333;
+    color: black;
     text-decoration: none;
-    border: 1px solid #49afcd;
-    border-bottom:2px solid #49afcd;
+    border-bottom:2px solid #2e2e2e;
+
+    background-color: #505050;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+
 }
 
 .navbar .nav .active > a, .navbar .nav .active > a:hover{
-    background-color: #49afcd;
-    border: 1px	solid #3195b2;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom:2px solid #49afcd;
+    background-color: #2e2e2e;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom:2px solid #2e2e2e;
     -moz-background-clip: padding;
     -webkit-background-clip: padding-box;
-    background-clip: padding-box;
 }
 
 .navbar .nav .dropdown-toggle .caret,
