--- a/s/css/_styles.css
+++ b/s/css/_styles.css
@@ -1349,6 +1349,10 @@ footer .testimonial{
     background:#efefef;
 }
 
+footer .testimonial .span9{
+    background:url(../img/skin/speech_line.png) no-repeat 100% 15px;
+}
+
 footer blockquote{
     border:none;
     padding-left:0px;
