--- a/templates/conditions/metabolism-and-endocrine/_all.html
+++ b/templates/conditions/metabolism-and-endocrine/_all.html
@@ -16,12 +16,7 @@
                     <div class="thumbnail">
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
-                            <h5>Blood, Bone Marrow, Lymphatics</h5>
-                            <p>Red Blood Cell Conditions,
-                                Clotting and Coagulation,
-                                Leukemias,<br/>
-                                Lymphomas,<br/>
-                                Benign Bone Marrow Disorders</p>
+                            <h5>Obesity &amp; Weight Problems</h5>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
@@ -30,12 +25,7 @@
                     <div class="thumbnail">
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
-                            <h5>Heart and Vessels</h5>
-                            <p>Congenital Heart Defects,
-                            Diseases of Blood Vessels,
-                            Diagnostics and Blood Tests,
-                            Coronary Circulation Conditions,
-                            Cardiac Arrest</p>
+                            <h5>Metabolic Syndrome</h5>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
@@ -44,12 +34,7 @@
                     <div class="thumbnail">
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
-                            <h5>Lungs</h5>
-                            <p>Obstructive Disease
-                            Environmental and Occupational Diseases
-                            Pulmonary Circulation Conditions
-                            Restrictive and Interstitial Diseases
-                            Congenital Disorders</p>
+                            <h5>Hyperthyroidism</h5>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
