--- a/templates/conditions/metabolism-and-endocrine/index.html
+++ b/templates/conditions/metabolism-and-endocrine/index.html
@@ -5,4 +5,5 @@
 {% block author_name %}Nick Semenkovich{% endblock %}
 {% block author_image %}{{ static('img/heads/semenko.jpg') }}{% endblock %}
 {% block welcome_text %}Welcome to the endo topic, etc.{% endblock %}
+{% block section_title %}Endocrine and Metabolic Conditions{% endblock %}
 {% block all_conditions %}{% include 'conditions/metabolism-and-endocrine/_all.html' %}{% endblock %}
