--- a/templates/donate.html
+++ b/templates/donate.html
@@ -5,59 +5,46 @@
 <section class="mainContentWrap" xmlns="http://www.w3.org/1999/html">
           <div class="container mainContent">
             <div class="row-fluid">
-              <div class="span12">
+              <div class="span12 post full">
                 <div class="row-fluid">
-                  <div class="innerSpacer">
-
-
-                    <div class="row-fluid">
-                      <div class="span12 post full">
-
-
-
-                          <div class="row-fluid">
-                              <div class="span5">
-                              <div class="hero-unit">
-                                 <h2>Help Open Medicine</h2>
-                                 <p>We're trying our best to open medical education, but bandwidth and development costs are expensive! </p>
-                                 {# <p>
-                                   <a class="btn btn-info btn-large"><i class="icon-lock icon-white"></i>
-                                    Donate via Amazon
-                                   </a>
-                                 </p> #}
-                               </div></div>
-                            <div class="span7">
-{#                              <blockquote><p>"Inspirational tiny quote here omg."</p><small class="pull-right">Some Guy</small></blockquote>#}
-                                <blockquote>
-                                    <h2>Give Now</h2><br/>
-                                    <h4>Dontatons of any amount are appreciated. Contributions help us directly cover hosting and operational expenses,
-                                        such as web servers, drawing tablets &amp; microphones for video production, and software licenses.</h4>
-                                    <p>
-                                    	<table class="table" border="0" cellpadding="0" cellspacing="0" style="width:250px">
-                                    	<form action="https://authorize.payments.amazon.com/pba/paypipeline" method="post">
-                                    	  <input type="hidden" name="returnUrl" value="http://www.clindesk.org/thanks.html" >
-                                    	  <input type="hidden" name="processImmediate" value="1" >
-                                    	  <input type="hidden" name="accessKey" value="11SEM03K88SD016FS1G2" >
-                                    	  <input type="hidden" name="signatureMethod" value="HmacSHA256" >
-                                    	  <input type="hidden" name="collectShippingAddress" value="0" >
-                                    	  <input type="hidden" name="isDonationWidget" value="1" >
-                                    	  <input type="hidden" name="amazonPaymentsAccountId" value="DKCLGRNGBYIT44TA45I766U33ZQ8MRBMJPQZF5" >
-                                    	  <input type="hidden" name="referenceId" value="clindesk-001" >
-                                    	  <input type="hidden" name="cobrandingStyle" value="logo" >
-                                    	  <input type="hidden" name="immediateReturn" value="1" >
-                                    	  <input type="hidden" name="description" value="MedEd: ClinDesk and White Coat Academy" >
-                                    	  <input type="hidden" name="abandonUrl" value="http://www.clindesk.org/support.html" >
-                                    	  <input type="hidden" name="signatureVersion" value="2" >
-                                    	  <input type="hidden" name="signature" value="fLF7+Z18Iz+1Jh+1TDjdopAEAJ5Ly5z3DX8eln6Xv10=" >
-                                        <tr>
-                                        	<td>$&nbsp;<input type="text" name="amount" size="8" value="15.00" style="width:50px;">&nbsp;</td>
-                                    	    <td><input type="submit" value="Donate via Amazon" class="btn btn-info btn-medium"></td>
-                                    	</tr>
-                                        </form>
-                                    	</table></p>
-                                </blockquote>
-                            </div>
-                          </div>
+                  <div class="span5">
+                    <div class="hero-unit">
+                      <h2>Help Open Medicine</h2>
+                      <p>We're trying our best to open medical education, but bandwidth and development costs are expensive! </p>
+                      {# <p>
+                        <a class="btn btn-info btn-large"><i class="icon-lock icon-white"></i>
+                          Donate via Amazon
+                        </a>
+                      </p> #}
+                  </div></div>
+                  <div class="span7">
+		    {#                              <blockquote><p>"Inspirational tiny quote here omg."</p><small class="pull-right">Some Guy</small></blockquote>#}
+                    <blockquote>
+                      <h2>Give Now</h2><br/>
+                      <h4>Dontatons of any amount are appreciated. Contributions help us directly cover hosting and operational expenses.</h4>
+                      <p>
+                          <form action="https://authorize.payments.amazon.com/pba/paypipeline" method="post">
+                            <input type="hidden" name="returnUrl" value="http://www.clindesk.org/thanks.html" >
+                            <input type="hidden" name="processImmediate" value="1" >
+                            <input type="hidden" name="accessKey" value="11SEM03K88SD016FS1G2" >
+                            <input type="hidden" name="signatureMethod" value="HmacSHA256" >
+                            <input type="hidden" name="collectShippingAddress" value="0" >
+                            <input type="hidden" name="isDonationWidget" value="1" >
+                            <input type="hidden" name="amazonPaymentsAccountId" value="DKCLGRNGBYIT44TA45I766U33ZQ8MRBMJPQZF5" >
+                            <input type="hidden" name="referenceId" value="clindesk-001" >
+                            <input type="hidden" name="cobrandingStyle" value="logo" >
+                            <input type="hidden" name="immediateReturn" value="1" >
+                            <input type="hidden" name="description" value="MedEd: ClinDesk and White Coat Academy" >
+                            <input type="hidden" name="abandonUrl" value="http://www.clindesk.org/support.html" >
+                            <input type="hidden" name="signatureVersion" value="2" >
+                            <input type="hidden" name="signature" value="fLF7+Z18Iz+1Jh+1TDjdopAEAJ5Ly5z3DX8eln6Xv10=" >
+                            <font style="vertical-align:top">$</font>&nbsp;<input type="text" name="amount" size="8" value="35.00" style="width:50px;">&nbsp;
+                            <input type="submit" value="Donate via Amazon" class="btn btn-info btn-medium" style="margin-bottom:9px">
+                          </form>
+		      </p>
+                    </blockquote>
+                  </div>
+                </div>
 {#
                           <div class="row-fluid">
                             <div class="span4">
@@ -205,10 +192,7 @@
                     <!--end post-->
 #}
 
-                  </div>
-                </div>
               </div>
-
             </div>
           </div>
         </section>
