Update templates for 2:00 p.m. launch for Dr. Mintz's meeting.

--- a/templates/_all_conditions.html
+++ b/templates/_all_conditions.html
@@ -12,8 +12,9 @@
                             Adrenal Gland,
                             Diabetes,<br/>
                             Lipid Disorders,<br/>
-                            Vitamins and Nutrition, Genetic Disorders (MEN I and II)</p>
-                            <p><a href="/conditions/metabolism-and-endocrine/" class="btn btn-primary">Learn More</a></p>
+                            Vitamins and Nutrition, Genetic Disorders</p>
+                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
+{#                            <p><a href="/conditions/metabolism-and-endocrine/" class="btn btn-primary">Learn More</a></p> #}
                         </div>
                     </div>
                 </li>
@@ -22,10 +23,9 @@
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Blood, Bone Marrow, Lymphatics</h5>
-                            <p>Red Blood Cell Conditions,
-                                Clotting and Coagulation,
-                                Leukemias,<br/>
-                                Lymphomas,<br/>
+                            <p>Red Blood Cell Conditions,<br/>
+                                Clotting and Coagulation,<br/>
+                                Leukemias, Lymphomas,<br/>
                                 Benign Bone Marrow Disorders</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
@@ -76,10 +76,9 @@
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Digestion &amp; Gastrointestinal</h5>
-                            <p>Stomach Ulcers,
-                            Acid Reflux,
+                            <p>Stomach Ulcers, Acid Reflux,<br/>
                             Irritable Bowel Syndrome,<br/>
-                            Celiac Disease (Gluten Intolerance),<br/>
+                            Celiac Disease<br>
                             Colon Cancer</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
@@ -90,11 +89,10 @@
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Brain and Nervous System</h5>
-                            <p>Headaches,
-                                Alzheimers, <br/>
+                            <p>Headaches, Alzheimers, <br/>
                                 Brain Tumors,<br/>
                                 Stroke, Bleeding, <br/>
-								Degenerative Disc Disease,
+				Degenerative Disc Disease,<br/>
                                 Meningitis</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
@@ -105,11 +103,10 @@
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Kidneys and Urinary System</h5>
-                            <p>Chronic Kidney Disease,
-                            Acute Renal Failure,
-                            Diabetic Nephropathy,
-                            Urinary Incontinence,
-                            Hypertension and the Kidney</p>
+                            <p>Chronic Kidney Disease,<br>
+                            Acute Renal Failure,<br>
+                            Diabetic Nephropathy,<br>
+                            Urinary Incontinence</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
@@ -119,10 +116,11 @@
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Obstetrics and Gynecology</h5>
-                            <p>Preeclampsia, Breast Cancer,
-                            Cervical Cancer, </br>endometrial cancer,</br>
-                            Uterine Fibroids, Menopause</br>
-                            Polycystic Ovarian Syndrome</p>
+                            <p>Preeclampsia &amp; Pregnancy,<br>
+                              Uterine Fibroids,<br>
+			      Menopause,</br>
+                              Polycystic Ovarian Syndrome,<br>
+			      Cancers (Breast, Cervical, etc.)</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
