--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -20,8 +20,8 @@
 <div id="mc_embed_signup" style="text-align: center">
 <form action="http://clindesk.us5.list-manage2.com/subscribe/post?u=b6cec37bff09d081f3eee6c75&amp;id=b4d36636c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
     <h3>Updates Mailing List</h3>
-  <h4>We're growing! We plan on adding many topics here over the next few weeks.</h4>
-  <h4>If you'd like to be notified when we release new topics, enter your address:</h4>
+  <h4>We're growing! We plan on adding many topics over the next few weeks.</h4>
+  <h4>If you'd like to be notified about updates, enter your address:</h4>
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
   <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info"></div>
 </form>
