--- a/templates/index.html
+++ b/templates/index.html
@@ -4,20 +4,16 @@
 {% block maincontent %}
 <div class="container mainContent">
     <div class="row-fluid">
-        <div class="span8">
-            <div class="innerSpacer">
-              <iframe width="100%" height="360" seamless="seamless" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0&html5=1" frameborder="0"></iframe>
-            </div>
-        </div>
 
+{#
         <!--description-->
-        <div class="span4">
+        <div class="span3">
             <div class="item-description">
                 <h3>Welcome to ClinDesk</h3>
                 <div class="subtitle">
                     <span class="icon-file "></span><a href="#">Opening Medical knowledge</a>
                 </div>
-                <p>Our video lectures are designed for everyone, from people with no medical background through to experienced physicians. For each condition we will discuss:</p>
+                <p>Our video lectures are designed for everyone, from people with no medical background to experienced physicians. For each condition we discuss:</p>
                 <ul class="unstyled">
                     <li><i class="icon-ok"></i>Background</li>
                     <li><i class="icon-ok"></i>Epidemiology</li>
@@ -30,8 +26,37 @@
                 <a href="#condition-topics" class="btn btn-primary"><i class="icon-share icon-white"></i>See the Topics</a>
             </div>
         </div>
+#}
+
+	<div class="span12">
+          <div class="hero-unit" style="padding-top:15px">
+            <h1 style="color:black;text-align:center">Welcome to ClinDesk</h1><h2 style="color:black;text-align:center">Opening Medical Education</h2><br>
+
+<center><img src="{{ static('clindesk-logo.png') }}" style="border:1px solid #ccc; padding:2px; background:#eee;height:80px">
+&nbsp;
+<img src="{{ static('whitecoat-logo.png') }}" style="border:1px solid #ccc; padding:2px; background:#eee; height:80px;"><br><br></center>
+
+
+            <p>ClinDesk is a team of senior medical students and resident physicians deeply familiar with medical knowledge and education. </p>
+	    <p>Over the coming months, we'll be producing educational videos to walk patients &amp; their families through the </p>
+	    <p>Together with our sister-site White Coat Academy, we hope to change the face of medical education.</p><br>
+	    <p>Stay tuned,</p>
+	    <p>Nick Semenkovich</p>
+	    <p style="line-height:0px">Founder</p>
+          </div>
+	</div>
+
+{#        <div class="span9">
+            <div class="innerSpacer">
+              <iframe width="100%" height="360" seamless="seamless" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0&html5=1" frameborder="0"></iframe>
+            </div>
+        </div>
+#}
+
     </div>
 </div>
+
+
 
 <section class="mainContentWrap">
     <div class="container mainContent">
