Update Lungs per @dgermain

--- a/templates/_all_conditions.html
+++ b/templates/_all_conditions.html
@@ -50,11 +50,11 @@
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Lungs</h5>
-                            <p>Obstructive Disease
-                            Environmental and Occupational Diseases
-                            Pulmonary Circulation Conditions
-                            Restrictive and Interstitial Diseases
-                            Congenital Disorders</p>
+                            <p>Obstructive Disease,<br>
+                              Environmental Exposures,<br>
+			      Work-related Diseases,<br>
+                              Pulmonary Hypertension,<br>
+                              Congenital Disorders</p>
                             <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
