Finish the filler text (whoops!). Another shout-out @dgermain

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
 
             <p>ClinDesk is a team of senior medical students and resident physicians deeply familiar with medical knowledge and education. </p>
-	    <p>Over the coming months, we'll be producing educational videos to walk patients &amp; their families through the </p>
+	    <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
 	    <p>Together with our sister-site White Coat Academy, we hope to change the face of medical education.</p><br>
 	    <p>Stay tuned,</p>
 	    <p>Nick Semenkovich</p>
