Grammar fix for Ryan.

--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
                   <div class="span12"><h1>Our Philosophy</h1></div>
                 </div>
                 <div class="row-fluid">
-                  <div class="span12"><p>ClinDesk is a team of senior medical students and resident physicians deeply familiar with medical knowledge and education. Our recent experiences in medical school have helped shape our view that there is a disconnect between the training of physicians and the way patients learn about and understand their health.</p>
+                  <div class="span12"><p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. Our recent experiences in medical school have helped shape our view that there is a disconnect between the training of physicians and the way patients learn about and understand their health.</p>
 
                   <p>Our mission is to lead the transition of medical education from a proprietary to “open” process. We believe this process should be scalable and agile -- health literacy should be accessible to everyone in a context-appropriate fashion.</p>
 
