--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 <img src="{{ static('whitecoat-logo.png') }}" style="border:1px solid #ccc; padding:2px; background:#eee; height:80px;"><br><br></center>
 
 
-            <p>ClinDesk is a team of senior medical students and resident physicians deeply familiar with medical knowledge and education. </p>
+            <p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
 	    <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
 	    <p>Together with our sister-site White Coat Academy, we hope to change the face of medical education.</p><br>
 	    <p>Stay tuned,</p>
